--- a/GeoQuiz/app/src/main/res/layout/activity_main.xml
+++ b/GeoQuiz/app/src/main/res/layout/activity_main.xml
@@ -29,10 +29,22 @@
             android:id="@+id/false_button" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/next_button"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/next_button" />
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/prev_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_left" />
+
+        <ImageButton
+            android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/arrow_right" />
+    </LinearLayout>
 
 </LinearLayout>
